Swedish - Task #236: 1/3 complete
About.xml is fully translated, until further notice

--- a/app/src/main/res/values-se/about.xml
+++ b/app/src/main/res/values-se/about.xml
@@ -16,9 +16,9 @@
 
     <string name="privacy_policy"><![CDATA[
         <h1>Sekretesspolicy</h1>
-        <p>This page informs you of our policies regarding the collection,
-        use and disclosure of personal information we receive from users of our
-        app (monerujo: Monero Wallet).
+        <p>Den här sidan informerar dig om våra villkor angående samlingen
+        och användningen av personlig information vi hämtar från användare
+        av vår app (monerujo: Monero Plånbok).
         </p>
         <p>Genom att använda denna app, går du med på samling och användning av information
         enligt denna policy.
