--- a/app/src/main/res/values-zh-rTW/help.xml
+++ b/app/src/main/res/values-zh-rTW/help.xml
@@ -55,11 +55,12 @@
         你的公開地址就像是銀行帳號一樣可以與他人分享而不需要擔心
         會失去你的Monero，其他人可以透過這個地址發送Monero到你的錢包。
         <h2>記憶種子碼</h2>
-        這是你唯一需要用來回復錢包的資訊並且可以用來取用錢包的完全權限。妥善保護好這份種子碼是相當重要的事情，因為它可以給予<em>任何人</em>對你的錢包操作的權限! 如果你還尚未在安全的地方抄寫保存這份種子碼，請盡速進行。
+        這是你唯一需要用來回復錢包的資訊並且可以用來取用錢包的完全權限。妥善保護好這份種子碼是相當重要的事
+        情，因為它可以給予<em>任何人</em>對你的錢包操作的權限!如果你還尚未在安全的地方抄寫保存這份種子碼，請盡速進行。
         <h2>錢包檔回復密碼</h2>
         請務必抄寫下此份密碼。當你重置手機或重新安裝APP時，你將會需要用它來重新存取錢包檔。<br/>
         <h3>CrAzYpass加密</h3>
-        若你的密碼顯示為4組的52英數字元，恭喜你! 
+        若你的密碼顯示為4組的52英數字元，恭喜你!
         你的錢包檔正由256位元的金鑰所保護著，這是本裝置基於你自己設定的密碼所產生(新建或更改密碼時皆會產生)。
         如此可以大幅提高錢包檔被駭客破解的難度。<br/>
         所有新建立的錢包預設都會啟用這個加密功能。
@@ -156,9 +157,11 @@
         Monerujo開發團隊與XMR.TO並無相關，無法為你解決其服務上的問題</p>
         <h2>XMR.TO 匯率<h2>
         <p>在 \"金額\" 的頁面中你將看到 XMR.TO 服務的參數。包含了匯率以及BTC金額的上下限。
-        請注意這個階段顯示的匯率並不是確定的。你也可以看到在多少金額之下可以直接發送BTC，而不用等待XMR的確認。(詳見 XMR.TO的FAQ以了解更多)。請注意XMR.TO並不額外收取手續費用，是不是很棒呢?</p>
+        請注意這個階段顯示的匯率並不是確定的。你也可以看到在多少金額之下可以直接發送BTC，而不用等待XMR的確認。
+        (詳見 XMR.TO的FAQ以了解更多)。請注意XMR.TO並不額外收取手續費用，是不是很棒呢?</p>
         <h2>XMR.TO 訂單<h2>
-        <p>在 \"確認\" 的頁面中，你將可以看到正式的XMR.TO訂單。這訂單僅在一段時間內有效。你可以在 \"發送\" 的按鈕上看到倒數計時。這時的匯率可能與前一個頁面顯示的不同</p>
+        <p>在 \"確認\" 的頁面中，你將可以看到正式的XMR.TO訂單。這訂單僅在一段時間內有效。
+        你可以在 \"發送\" 的按鈕上看到倒數計時。這時的匯率可能與前一個頁面顯示的不同</p>
         <h2>XMR.TO 私鑰<h2>
         <p>由於Monerujo僅處理Monero的部分，你的XMR.TO金鑰將可用於再XMR.TO的首頁上查詢追蹤BTC部分的交易狀況。</p>
         <p>請注意，此金鑰僅在交易發起的24小時內有效。</p>
@@ -174,9 +177,11 @@
         Monerujo開發團隊與XMR.TO並無相關，無法為你解決其服務上的問題</p>
         <h2>XMR.TO 匯率<h2>
         <p>在 \"金額\" 的頁面中你將看到 XMR.TO 服務的參數。包含了匯率以及BTC金額的上下限。
-        請注意這個階段顯示的匯率並不是確定的。你也可以看到多少金額的可以進行零確認XMR的BTC發送(詳見 XMR.TO的FAQ以了解更多)。請注意XMR.TO並不額外收取手續費用，是不是很棒呢?</p>
+        請注意這個階段顯示的匯率並不是確定的。你也可以看到多少金額的可以進行零確認XMR的BTC發送
+        (詳見 XMR.TO的FAQ以了解更多)。請注意XMR.TO並不額外收取手續費用，是不是很棒呢?</p>
         <h2>XMR.TO 訂單<h2>
-        <p>在 \"確認\" 的頁面中，你將可以看到正式的XMR.TO訂單。這訂單僅在一段時間內有效。你可以在 \"發送\" 的按鈕上看到倒數計時。這時的匯率可能與前一個頁面顯示的不同</p>
+        <p>在 \"確認\" 的頁面中，你將可以看到正式的XMR.TO訂單。這訂單僅在一段時間內有效。
+        你可以在 \"發送\" 的按鈕上看到倒數計時。這時的匯率可能與前一個頁面顯示的不同</p>
         <h2>XMR.TO 私鑰<h2>
         <p>由於Monerujo僅處理Monero的部分，你的XMR.TO金鑰將可用於再XMR.TO的首頁上查詢追蹤BTC部分的交易狀況。</p>
         <p>請注意，此金鑰僅在交易發起的24小時內有效。</p>
