--- a/app/src/main/res/values-de/help.xml
+++ b/app/src/main/res/values-de/help.xml
@@ -73,118 +73,112 @@
     ]]></string>
 
     <string name="help_list"><![CDATA[
-        <h1>Wallet List</h1>
+        <h1>Walletliste</h1>
         <h2>Node</h2>
-        <p>Monerujo uses a Remote Node to communicate with the Monero Network without having
-        to download and store a copy of the whole blockchain itself. You can find a list of popular
-        remote nodes or learn how to run your own remote node here https://moneroworld.com/<p>
-        <p>Monerujo comes with some Remote Nodes preset. It remembers the last five nodes used.</p>
+        <p>Monerujo benutzt eine Remote Node um mit dem Monero Netzwerk zu kommunizieren ohne
+        die gesamte Blockchain herunterladen zu müssen. Eine Liste bekannter Remotes Nodes
+		oder eine Anleitung zum Betreiben einer eigenen Remote Node findest du unter https://moneroworld.com/<p>
+        <p>Monerujo besitzt einige voreingestellte Remote Nodes. Es erinnert sich an die letzten 5 benutzten Nodes.</p>
         <h2>Wallets</h2>
-        <p>Here you see your wallets. They are located in the <tt>monerujo</tt> folder
-        in the internal storage of your device. You can use a file explorer app to see them.
-        You should make backups of this folder on a regular basis to off-device storage in
-        case your device explodes or gets stolen.</p>
-        <p>Select a wallet to open it or press the \"+\" to create a new one.
-        Or select one of the wallet operations:</p>
+        <p>Hier siehst du deine Wallets. Sie befinden sich im <tt>monerujo</tt> Ordner
+        im internen Speicher deines Geräts. Du kannst einen Datei-Explorer nutzen um sie zu finden.
+        Du solltest regelmäßig Backups von diesem ORdner machen und diese sicher aufbewahren für den Fall,
+        dass dein Gerät EXPLODIERT oder gestohlen wird.</p>
+        <p>Wähle ein Wallet um es zu öffnen oder tippe \"+\" um ein neues zu erstellen.
+        Oder wähle eine der folgenden Wallet Optionen:</p>
         <h3>Details</h3>
-        <p>Show the wallet details, seed &amp; keys.</p>
-        <h3>Receive</h3>
-        <p>Make a QR code for receiving Moneroj.</p>
-        <h3>Rename</h3>
-        <p>Rename the wallet. Backups are not renamed.</p>
+        <p>Zeige die Walletdetails, Seed &amp; Keys.</p>
+        <h3>Empfangen</h3>
+        <p>Generiere einen QR-Code um Moneroj zu empfangen.</p>
+        <h3>Umbenennen</h3>
+        <p>Benenne die Wallet um. Backups werden nicht umbenannt.</p>
         <h3>Backup</h3>
-        <p>Make a copy of the wallet in the <tt>backups</tt> folder inside the <tt>monerujo</tt>
-        overwriting previous copies there.</p>
-        <h3>Archive</h3>
-        <p>Make a backup and delete the wallet afterwards. The copy remains in the <tt>backups</tt>
-        folder. If you no longer need your backups you should delete them with a file explorer or
-        secure delete app.</p>
+        <p>Erstelle eine Kopie der Wallet im <tt>backups</tt> Ordner innerhalb des <tt>monerujo</tt> Ordners,
+        die bereits vorhandene Kopien überschreibt.</p>
+        <h3>Archivieren</h3>
+        <p>Erstellt ein Backup und löscht danach das Wallet. Die Kopie verbleibt im <tt>backups</tt>
+        Ordner. Falls du deine Backups nicht länger benötigst solltest du sie mit einem Datei-Explorer löschen oder
+		die App sauber und ordentlich deinstallieren</p>
     ]]></string>
 
     <string name="help_wallet"><![CDATA[
-        <h1>The Wallet</h1>
-        <h2>Scanning</h2>
-        Because Monero likes to keep things private, every time you open a Monerujo wallet we have to
-        scan the blockchain to see if any new Moneroj have been sent to your wallet, this only
-        stores information to your phone which belongs to your wallet. Sometimes it can take a while
-        because you haven’t synced in a long time.
-        <h2>The Balance</h2>
-        <p><b>Help! My wallet balance has disappeared or is unconfirmed!</b><br/>
-        Don’t panic! When you send funds from your wallet, some of your balance will temporarily show
-        as unconfirmed.
-        This happens as a result of how Monero is exchanged on the blockchain and how change works.
-        Read more about change at https://getmonero.org/resources/moneropedia/change.html
-        <h2>Transaction List</h2>
-        <p>A list of the wallet transactions. In view wallets, only incoming transactions are shown.</p>
+        <h1>Das Wallet</h1>
+        <h2>Scannen</h2>
+        Weil Monero gerne Dinge geheim hält, wird nach jedem Öffnen einer Monerujo Wallet die Blockchain gescannt
+		um zu überprüfen ob neue Moneroj zu dieser Wallet gesendet wurden. Dies speichert ausschließlich Informationen
+		die zur Wallet auf diesem Gerät gehören. Manchmal kann dies etwas länger dauern, da die letzte Synchronisierung
+        eine Weile her ist.
+        <h2>Das Saldo</h2>
+        <p><b>Hilfe! Mein Wallet Saldo ist verschwunden oder ist unbestätigt!</b><br/>
+        Keine Panik! Wenn du Gelder von deiner Wallet sendest wird ein Teil deines Saldos kurzzeitig als unbestätigt angezeigt.
+        Dies geschieht aufgrund der zugrunde liegenden Technik und wie Monero auf der Blockchain bewegt werden.
+        Lies mehr darüber auf https://getmonero.org/resources/moneropedia/change.html
+        <h2>Transaktionsliste</h2>
+        <p>Eine Liste deiner Transaktionen. In View Wallets werden nur die eingehenden Transaktionen angezeigt.</p>
     ]]></string>
 
     <string name="help_tx_details"><![CDATA[
-        <h1>Transaction Details</h1>
-        <h2>Destination</h2>
-        This is the public address of the wallet you sent Monero to
-        <h2>PaymentID</h2>
-        You can use a Payment ID to identify the reason you sent Monero between two parties this is
-        fully optional and private. For example it can allow a Business to reconcile your transaction
-        with an item you bought.
+        <h1>Transaktionsdetails</h1>
+        <h2>Ziel</h2>
+        Dies ist die öffentliche Adresse des Wallets, zu dem du Moneroj gesendet hast.
+        <h2>Zahlungs-ID</h2>
+        Du kannst eine Zahlungs-ID benutzen um Zahlungen zu identifizieren. Dies ist optional und ist nicht öffentlich einsehbar. 
+		Zum Beispiel kann ein Unternehmen damit Zahlungen und Verkäufe miteinander verbinden.
         <h2>TX ID</h2>
-        This is your Transaction ID you can use it to identify your obfuscated transaction on a Monero
-        Blockchain explorer like <a href="https://xmrchain.net/">https://xmrchain.net/</a>
-        <h2>TX KEY (Transaction Key)</h2>
-        This is your transaction private key, keep this safe as revealing this to a third party
-        reveals which signature in a ring is yours, thereby making your transaction transparent.
+        Dies ist deine Transaktions-ID die du benutzen kannst um verschleierte Transaktionen mit einem Monero
+        Blockchain-Explorer wie <a href="https://xmrchain.net/">https://xmrchain.net/</a> zu identifizieren.
+        <h2>TX Schlüssel (Transaktionsschlüssel)</h2>
+        Dies ist dein geheimer Transaktionsschlüssel. Bewahre ihn sicher auf da er Dritten deine Signatur in einem Ring offenbart 
+		und deshalb deine Transaktionen transparent macht.
         <h2>Block</h2>
-        This was the block your transaction was included in.
+        Dies ist der Block der deine Transaktion beinhaltet..
     ]]></string>
 
     <string name="help_send"><![CDATA[
-        <h1>Send</h1>
-        <h2>Receiver’s address</h2>
-        <p>This is the public address of the wallet you are sending Moneroj to, you can copy this from
-        your clipboard, scan a QR code or enter it manually. Make sure you triple check this to
-        ensure you aren’t sending coins to the wrong address.</p>
-        <p>In addition to sending XMR, you can send BTC through the XMR.TO service (see https://xmr.to
-        for details). See the section on sending BTC below.</p>
-        <h2>Payment ID</h2>
-        <p>You can use a Payment ID to identify the reason you sent Monero between two parties. This
-        is fully optional and private. For example it can allow a business to reconcile your
-        transaction with an item you bought.<p>
-        <h2>Ring size</h2>
-        <p>There are a number of ring sizes to choose from in Monerujo. If you are a beginner user
-        we recommend you stick with a ring size of 7. Increasing the ring size above 7 increases
-        the amount of signers in a ring signature, theoretically providing increased plausible
-        deniability. However setting high ring sizes can also make your transaction stand out on
-        the blockchain.</p>
-        <h2>Priority</h2>
-        <p>This setting determines the speed at which your transaction will be included in the
-        blockchain. A high priority setting will correlate directly with a higher transaction fee
-        and the inverse is true for a low priority. Please note that if you set your transaction to
-        a low priority it can be hours before it is included on the blockchain. The default priority
-        is \"Medium\".</p>
-        <h1>Sending BTC</h1>
+        <h1>Senden</h1>
+        <h2>Empfängeradresse</h2>
+        <p>Dies ist die öffentliche Adresse des Wallets, an das du Moneroj sendest. Du kannst sie aus der Zwischenablage kopieren, 
+		einen QR-Code scannen oder sie manuell eingeben. Vergewissere dich, dass es die richtige Adresse ist um
+        sicherzustellen die Moneroj nicht irrtümlich an die falsche Adresse zu senden.</p>
+        <p>Zusätzlich zum Senden von XMR kannst du auch BTC mittels des XMR.TO Service versenden (siehe https://xmr.to
+        für Details). Siehe den Abschnitt über das Versenden von BTC unten.</p>
+        <h2>Zahlungs-ID</h2>
+        <p>Du kannst eine Zahlungs-ID benutzen um den Grund einer Transaktion zwischen zwei Parteien zu identifizieren. Dies ist optional 
+		und nicht öffentlich einsehbar. Zum Beispiel kann ein Unternehmen damit Zahlungen und Verkäufe miteinander verbinden.<p>
+        <h2>Ringgröße</h2>
+        <p>Es gibt verschiedene Ringgrößen in Monerujo aus denen du wählen kannst. Falls du ein neuer Nutzer bist
+        empfehlen wir bei der Standard Ringgröße zu bleiben (aktuell 7). Die Ringgröße zu erhöhen erhöht die Anzahl der Signaturen in einer Ring-Signatur, 
+		was theoretisch das Erraten der richtigen Signatur erschwert. Eine höhere Ringgröße lässt eine Transaktion jedoch 
+		auf der Blockchain auch herausstechen.</p>
+        <h2>Priorität</h2>
+        <p>Diese Einstellung bestimmt wie zügig deine Transaktion in einem Block auf der Blockchain verarbeitet wird.
+		Eine höhere Priorität bedeutet eine höhere Transaktionsgebühr, eine niedrige Priorität bedeutet eine 
+		niedrigere Transaktionsgebühr. Bitte bedenke, dass eine Transaktion mit einer niedrigen Priorität unter Umständen
+		eine Weile benötigt bis sie auf der Blockchain verarbeitet wird. Die Standard-Priorität
+        ist \"Mittel\".</p>
+        <h1>BTC Senden</h1>
         <h2>XMR.TO</h2>
-        <p>XMR.TO is a third party service which acts as an exchange from Monero to Bitcoin.
-        We use the XMR.TO API to integrate Bitcoin payments into Monerujo. Please check out
-        https://xmr.to and decide for yourself if this is something you want to use. The Monerujo
-        Team is not associated with XMR.TO and cannot help you with their service.</p>
-        <h2>XMR.TO Exchange Rate<h2>
-        <p>On the \"Amount\" screen you will be shown the current parameters of the XMR.TO service. These
-        include the current exchange rate as well as upper and lower BTC limits. Note that this
-        rate is not guaranteed at this point. You will also see
-        the amount up to which the BTC transaction will be executed instantly without waiting for
-        XMR confirmations (see the XMR.TO FAQ for more details). Please note, that XMR.TO does
-        not charge extra fees - how cool is that?</p>
-        <h2>XMR.TO Order<h2>
-        <p>On the \"Confirm\" screen, you will see the actual XMR.TO order. This order is valid for
-        a limited time - you may notice a countdown on the \"Spend\" button. The exchange rate may
-        be different to the indicative one shown on previous screens.</p>
-        <h2>XMR.TO Secret Key<h2>
-        <p>Since Monerujo only handles the Monero part of your transaction your XMR.TO secret key
-        can be used to track the Bitcoin part of your order on the XMR.TO homepage.</p>
-        <p>Please note, that this secret key is only valid for 24 hours after the transaction is
-        started!</p>
+        <p>XMR.TO ist ein Drittanbieter-Service welcher als Tauschbörse von Monero zu Bitcoin fungiert.
+        Wir nutzen die XMR.TO Schnittstelle um Bitcoin Zahlungen in Monerujo zu integrieren. Bitte schaue dir
+        https://xmr.to an und entscheide selbst, ob du diesen Service nutzen willst. Das Monerujo
+        Team gehört nicht zu XMR.TO und kann keinen Support für ihren Service bieten</p>
+        <h2>XMR.TO Tauschkurs<h2>
+        <p>Auf dem \"Menge\" Bildschirm siehst du die aktuellen Werte des XMR.TO Service. Diese beinhalten den aktuellen Tauschkurs
+		sowie die oberen und unteren BTC-Limits. Bitte bedenke, dass dieser Kurs nicht garantiert ist an diesem Punkt.
+		Außerdem siehst du den Wert bis zu dem eine BTC-Zahlung sofort ausgeführt wird 
+		ohne auf XMR-Bestätigungen warten zu müssen (siehe die XMR.TO FAQ für mehr Details). 
+        XMR.TO erhebt keine zusätzlichen Gebühren - wie cool ist das denn?</p>
+        <h2>XMR.TO Auftrag<h2>
+        <p>Auf dem \"Bestätigen\" Bildschirm siehst du den genauen XMR.TO Auftrag. Dieser Auftrag gilt
+        für eine bestimmte Zeit - du siehst einen Countdown auf dem \"Ausgeben\" Button. Der Tauschkurs kann 
+        sich von den vorherigen Angaben unterscheiden.</p>
+        <h2>Geheimer XMR.TO Schlüssel<h2>
+        <p>Da Monerujo nur den Monero-Teil deiner Transaktion verarbeitet kann dein geheimer XMR.TO Schlüssel
+        dazu benutzt werden den Bitcoin-Teil deines Auftrags auf der XMR.TO-Homepage zu verfolgen.</p>
+        <p>Dieser geheime Schlüssel ist für 24h nach Start der Transaktion gültig!</p>
         <h2>XMR.TO Countdown!</h2>
-        <p>Once the countdown reaches zero, you need to get a new quote from XMR.TO by going back to the
-        previous step and then coming back to the \"Confirm\" screen.</p>
+        <p>Wenn der Countdown 0 erreicht musst du ein neues Angebot von XMR.TO anfordern indem du zum vorherigen Schritt
+        zurückkehrst und wieder zum \"Bildschirm\" zurückkommst.</p>
     ]]></string>
 
     <string name="help_xmrto"><![CDATA[
