Add fingerprint switch to the "change password" code

--- a/app/src/main/res/layout/prompt_changepw.xml
+++ b/app/src/main/res/layout/prompt_changepw.xml
@@ -40,4 +40,24 @@
             android:textAlignment="textStart" />
     </android.support.design.widget.TextInputLayout>
 
+    <LinearLayout
+        android:id="@+id/llFingerprintAuth"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="@string/generate_fingerprint_hint"
+            android:textSize="18sp" />
+    </LinearLayout>
+
 </LinearLayout>
