--- a/app/src/main/res/values-de/about.xml
+++ b/app/src/main/res/values-de/about.xml
@@ -2,8 +2,9 @@
 <resources>
     <string name="about_title">Über</string>
     <string name="about_close">Schließen</string>
+    <string name="about_whoami">Ich bin Monerujo</string>
     <string name="about_version">Version %1$s (%2$d)</string>
-
+    
     <string name="credits_text"><![CDATA[
         <b>Credits</b>
         <br/>
@@ -29,8 +30,8 @@
 	von Transaktionen lokal gesammelt und verarbeitet und verschlüsselt in das Monero-Netzwerk übertragen.
         </p>
         <p>Andere persönliche Daten werden von der App nicht gesammelt.</p>
-        <p>Wenn du die USD/EUR Tausch-Funktion (optional) nutzt fragt Monerujo
-	den aktuellen Tausch-Kurs über die öffentliche Schnittstelle von kraken.com ab.
+        <p>Wenn du den USD/EUR Umrechner (optional) nutzt fragt Monerujo
+	den aktuellen Kurs über die öffentliche Schnittstelle von kraken.com ab.
         Siehe dir ihre Datenschutzerklärung unter https://www.kraken.com/legal/privacy für
         Details darüber an, wie Daten in deinen Anfragen gesammelt werden (insbesondere der
         Abschnitt "Information We Collect Automatically").</p>
@@ -40,9 +41,9 @@
 	Deine IP-Adresse kann dabei aufgezeichnet werden.</p>
         <h2>App-Berechtigungen</h2>
         <ul>
-        <li>INTERNET : Verbinde zum Monero Netzwerk über einen Monero Daemon Knoten</li>
-        <li>READ_EXTERNAL_STORAGE : Lies die auf dem Gerät gespeicherten Wallet Dateien aus</li>
-        <li>WRITE_EXTERNAL_STORAGE : Schreibe Wallet Dateien auf das Gerät</li>
+        <li>INTERNET : Verbinde zum Monero Netzwerk über eine Monero Daemon Node</li>
+        <li>READ_EXTERNAL_STORAGE : Liest die auf dem Gerät gespeicherten Wallet Dateien aus</li>
+        <li>WRITE_EXTERNAL_STORAGE : Schreibt Wallet Dateien auf dem Gerät</li>
         <li>WAKE_LOCK : Halte das Gerät während der Synchronisation wach</li>
         <li>CAMERA : Scanne QR-Codes um Monero zu erhalten</li>
         </ul>
