--- a/app/src/main/res/values-zh-CN/help.xml
+++ b/app/src/main/res/values-zh-CN/help.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="help_create_new"><![CDATA[
-        <h1>建立全新的錢包</h1>
-        <p>如果你需要一個新的Monero錢包地址!</p>
-        <p>請輸入一個獨特的錢包名稱與錢包密碼。
-        這個密碼是用來保護你在這個裝置上的錢包資料，請使用足夠強度的密碼。</p>
-        <h2>請抄寫你的記憶種子碼!</h2>
-        <p>在下一個步驟將會顯示你的25字 \"記憶種子碼\"。
-        這是你在未來想回復錢包並且取得完整權限時所需的唯一資訊。
-        妥善保護好這份種子碼是相當重要的事情，因為它可以給予<em>任何人</em>
-        對你的錢包操作的權限!</p>
-        <p>如果你忘記錢包密碼，你依然能夠使用記憶種子碼來回復你的錢包。</p>
-        <p>沒有任何方法能夠恢復你的記憶種子碼，如果你弄丟了種子碼將會失去你的所有資金!
-        記憶種子碼是無法更改的，若種子碼被竊取或洩漏，你將必須立刻將資金轉移到新的錢包中(將會是新的一份種子碼)。
-        因此，最好的方式是將種子碼寫下並儲存在<em>數個</em>安全的地方。</p>
+        <h1>建立全新的钱包</h1>
+        <p>如果你需要一个新的Monero钱包地址!</p>
+        <p>请输入一个独特的钱包名称和钱包密码。
+        密码用于保护你在该设备上的钱包资料，请使用足够强度的密码。</p>
+        <h2>请抄写你的种子密语!</h2>
+        <p>在下一个步骤将会显示你的25个字 \"种子密语\"。
+        这是你在未来恢复钱包并取得完整权限时所需的唯一信息。
+        妥善保护好这份种子密语是相当重要的事情，因为它可以给予<em>任何人</em>
+        对你的钱包操作的权限!</p>
+        <p>如果你忘记钱包密码，你依然能够使用种子密语来恢复你的钱包。</p>
+        <p>沒有任何方法能够恢复你的种子密语，如果你弄丟了种子密语将会失去你的所有资金!
+        种子密语是无法更改的，若种子密语被窃取或泄露，你将必须立即将资金转移到新的钱包中(对应一份新种子密语)。
+        因此，最好的方式是將种子密语写下来，存储在<em>多个</em>安全的地方。</p>
     ]]></string>
 
     <string name="help_create_seed"><![CDATA[
