--- a/app/src/main/res/layout/template_notice.xml
+++ b/app/src/main/res/layout/template_notice.xml
@@ -4,7 +4,8 @@
     android:id="@+id/llNotice"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
     android:background="@color/moneroBlue"
     android:orientation="horizontal">
 
