--- a/app/src/main/res/values-zh-CN/help.xml
+++ b/app/src/main/res/values-zh-CN/help.xml
@@ -13,180 +13,180 @@
         <p>如果你忘记钱包密码，你依然能够使用种子密语来恢复你的钱包。</p>
         <p>沒有任何方法能够恢复你的种子密语，如果你弄丟了种子密语将会失去你的所有资金!
         种子密语是无法更改的，若种子密语被窃取或泄露，你将必须立即将资金转移到新的钱包中(对应一份新种子密语)。
-        因此，最好的方式是將种子密语写下来，存储在<em>多个</em>安全的地方。</p>
+        因此，最好的方式是将种子密语写下来，存储在<em>多个</em>安全的地方。</p>
     ]]></string>
 
     <string name="help_create_seed"><![CDATA[
-        <h1>用種子碼回復錢包</h1>
-        <p>如果你已經有一個錢包地址並想要在區塊鏈上回復它!</p>
-        <p>請輸入不得重複的錢包名稱與錢包密碼。
-        這個密碼是用來保護你在這個裝置上的錢包資料，請使用足夠強度的密碼。</p>
-        <p>在欄位\"種子碼\"中輸入你的25字種子碼。<p>
-        <p>若你知道你的第一筆交易是發生在哪個區塊高度的話，請在欄位\"回復高度\"中
-        輸入數值 - 若此欄留空則將會掃描<em>整個</em>區塊鏈以尋找屬於你錢包的交易與
-        餘額，將會花費<em>較長</em>的時間。</p>
+        <h1>用种子密语恢复钱包</h1>
+        <p>如果你已经有一个钱包地址并想要在区块链上恢复它!</p>
+        <p>请输入钱包名称（不得重复）和密码。
+        这个密码是用来保护钱包在该设备上的信息，请使用足够强度的密码。</p>
+        <p>在对应位置输入你的25字种子密语。<p>
+        <p>若你知道你的第一笔交易是发生在哪个区块高度的话，请在\"恢复高度\"中
+        输入数值 - 若此处留空不输入，则将扫描<em>整个</em>区块链以寻找属于你钱包的交易与
+        余额，将会花费<em>较长</em>的时间。</p>
     ]]></string>
 
     <string name="help_create_keys"><![CDATA[
-        <h1>用金鑰回復錢包</h1>
-        <p>如果你已經有一個錢包地址並想要用金鑰上回復它!</p>
-        <p>請輸入不得重複的錢包名稱與錢包密碼。
-        這個密碼是用來保護你在這個裝置上的錢包資料，請使用足夠強度的密碼。</p>
-        <p>在欄位\"公開地址\"中輸入你的Monero地址並填妥\"查看金鑰\"與\"花費金鑰\"。</p>
-        <p>若你知道你的第一筆交易是發生在哪個區塊高度的話，請在欄位\"回復高度\"中
-        輸入數值 - 若此欄留空則將會掃描<em>整個</em>區塊鏈以尋找屬於你錢包的交易與
-        餘額，將會花費<em>較長</em>的時間。</p>
+        <h1>用密钥恢复钱包</h1>
+        <p>如果你已经有一个钱包地址，并想用密钥恢复它。</p>
+        <p>请输入钱包名称（不得重复）和密码。
+        这个密码是用来保护钱包在该设备上的信息，请使用足够强度的密码。</p>
+        <p>在栏位\"公开地址\"中输入你的Monero地址并填妥\"查看密钥\"与\"支付密钥\"。</p>
+        <p>若你知道你的第一笔交易是发生在哪个区块高度的話，请在栏位\"恢复高度\"中
+        输入数值 - 若此栏留空则将会扫描<em>整个</em>区块链以寻找属于你钱包的交易与
+        余额，将会支付<em>较长</em>的时间。</p>
     ]]></string>
 
     <string name="help_create_view"><![CDATA[
-        <h1>建立唯讀錢包</h1>
-        <p>如果你只是想查看一個錢包的存入金額!</p>
-        <p>請輸入不得重複的錢包名稱與錢包密碼。
-        這個密碼是用來保護你在這個裝置上的錢包資料，請使用足夠強度的密碼。</p>
-        <p>在欄位\"公開地址\"中輸入你的Monero地址並填妥\"查看金鑰\"。</p>
-        <p>若你知道你的第一筆交易是發生在哪個區塊高度的話，請在欄位\"回復高度\"中
-        輸入數值 - 若此欄留空則將會掃描<em>整個</em>區塊鏈以尋找屬於你錢包的交易與
-        餘額，將會花費<em>較長</em>的時間。</p>
+        <h1>建立唯读钱包</h1>
+        <p>如果你只是想查看一个钱包的存入金额!</p>
+        <p>请输入不得重复的钱包名称与钱包密码。
+        这个密码是用来保护钱包在该设备上的信息，请使用足够强度的密码。</p>
+        <p>在栏位\"公开地址\"中输入你的Monero地址并填妥\"查看密钥\"。</p>
+        <p>若你知道你的第一笔交易是发生在哪个区块高度的話，请在栏位\"恢复高度\"中
+        输入数值 - 若此栏留空则将会扫描<em>整个</em>区块链以寻找属于你钱包的交易与
+        余额，将会支付<em>较长</em>的时间。</p>
     ]]></string>
 
     <string name="help_details"><![CDATA[
-        <h1>錢包詳細資訊</h1>
-        <h2>公開地址</h2>
-        你的公開地址就像是銀行帳號一樣可以與他人分享而不需要擔心
-        會失去你的Monero，其他人可以透過這個地址發送Monero到你的錢包。
-        <h2>記憶種子碼</h2>
-        這是你唯一需要用來回復錢包的資訊並且可以用來取用錢包的完全權限。妥善保護好這份種子碼是相當重要的事
-        情，因為它可以給予<em>任何人</em>對你的錢包操作的權限!如果你還尚未在安全的地方抄寫保存這份種子碼，請盡速進行。
-        <h2>錢包檔回復密碼</h2>
-        請務必抄寫下此份密碼。當你重置手機或重新安裝APP時，你將會需要用它來重新存取錢包檔。<br/>
+        <h1>钱包详细信息</h1>
+        <h2>公开地址</h2>
+        你的公开地址就像是银行账号一样可以与他人分享而不需要担心
+        会失去你的Monero，其他人可以透过这个地址发送Monero到你的钱包。
+        <h2>记忆种子码</h2>
+        这是你唯一需要用来恢复钱包的信息并且可以用来取用钱包的完全权限。妥善保护好这份种子码是相当重要的事
+        情，因为它可以给予<em>任何人</em>对你的钱包操作的权限!如果你还尚未在安全的地方抄写保存这份种子码，请尽速进行。
+        <h2>钱包档恢复密码</h2>
+        请务必抄写下此份密码。当你重置手机或重新安裝APP时，你将会需要用它来重新存取钱包档。<br/>
         <h3>CrAzYpass加密</h3>
-        若你的密碼顯示為4組的52英數字元，恭喜你!
-        你的錢包檔正由256位元的金鑰所保護著，這是本裝置基於你自己設定的密碼所產生(新建或更改密碼時皆會產生)。
-        如此可以大幅提高錢包檔被駭客破解的難度。<br/>
-        所有新建立的錢包預設都會啟用這個加密功能。
-        <h3>舊式密碼</h3>
-        如果你在此看到你的密碼，代表著你的錢包並沒有啟用CrAzYpass加密以提高安全性。
-        若要啟用，只需要在選單中點選\"更改密碼\"，在輸入新的密碼後(即使是與先前的密碼相同)，APP將會對
-        你的錢包檔進行CrAzYpass加密，請將密碼抄寫下來!
-        <h3>CrAzYpass加密的錢包</h3>
-        如果你需要重新安裝 Monerujo (譬如將手機重置或換了新的手機)，或是你想要將錢包檔在別的裝置或電腦上使用，你將必須
-        使用錢包回復密碼才能重新存取錢包。<br/>
-        當你在選單中點選 \"更改密碼\"時，可以更換新的密碼，但是請注意這同時會產生一組新的錢包回復密碼，請抄寫下來!
-        <h2>查看金鑰</h2>
-        查看金鑰可以被用在查看錢包的入帳金額而不包含花費錢包資金的權限。
-        <h2>花費金鑰</h2>
-        這個花費公鑰可以給予任何人花費你的錢包資金的權力，因此不要向任何人洩漏這份金鑰，就如同種子碼需要被妥善保存。
+        若你的密码显示为4组的52英数字元，恭喜你!
+        你的钱包档正由256位元的密钥所保护着，这是本设备基于你自己设定的密码所产生(新建或更改密码时皆会产生)。
+        如此可以大幅提高钱包档被骇客破解的难度。<br/>
+        所有新建立的钱包预设都会启用这个加密功能。
+        <h3>旧式密码</h3>
+        如果你在此看到你的密码，代表着你的钱包并沒有启用CrAzYpass加密以提高安全性。
+        若要启用，只需要在选单中点选\"更改密码\"，在输入新的密码后(即使是与先前的密码相同)，APP将会对
+        你的钱包档进行CrAzYpass加密，请将密码抄写下来!
+        <h3>CrAzYpass加密的钱包</h3>
+        如果你需要重新安裝 Monerujo (譬如将手机重置或换了新的手机)，或是你想要将钱包档在別的设备或电脑上使用，你将必须
+        使用钱包恢复密码才能重新存取钱包。<br/>
+        当你在选单中点选 \"更改密码\"时，可以更换新的密码，但是请注意这同时会产生一组新的钱包恢复密码，请抄写下来!
+        <h2>查看密钥</h2>
+        查看密钥可以被用在查看钱包的入账金额而不包含支付钱包资金的权限。
+        <h2>支付密钥</h2>
+        这个支付公钥可以给予任何人支付你的钱包资金的权力，因此不要向任何人泄漏这份密钥，就如同种子码需要被妥善保存。
     ]]></string>
 
     <string name="help_list"><![CDATA[
-        <h1>錢包列表</h1>
-        <h2>節點</h2>
-        <p>Monerujo使用遠端節點連接至Monero網路而不需要下載與儲存整個區塊鏈。
-        你可以在這個網站找到幾個熱門的公共遠端節點或是學習如何自行架設節點 https://moneroworld.com/</p>
-        <p>Monerujo 會預設數個遠端節點可供使用。並且自動記憶最近五個使用過的節點</p>
-        <h2>錢包</h2>
-        <p>在這你可以看到你的錢包們。他們被儲存在位於裝置內部儲存空間的<tt>monerujo</tt>資料夾中。
-        你可以利用檔案瀏覽器APP找到他們。你應該在裝置以外的地方備份他們以免你的裝置爆炸或失竊後的損失。</p>
-        <p>選擇一個錢包開啟或點選\"+\"符號以建立一個新的。或是選擇以下的操作:</p>
-        <h3>詳細資訊</h3>
-        <p>顯示錢包詳細資訊如種子碼 &amp; 金鑰。</p>
+        <h1>钱包列表</h1>
+        <h2>节点</h2>
+        <p>Monerujo使用远端节点连接至Monero网络而不需要下载与储存整个区块链。
+        你可以在这个网站找到几个热门的公共远端节点或是学习如何自行架设节点 https://moneroworld.com/</p>
+        <p>Monerujo 会预设数个远端节点可供使用。并且自动记忆最近五个使用过的节点</p>
+        <h2>钱包</h2>
+        <p>在这你可以看到你的钱包们。他们被储存在位于设备內部储存空间的<tt>monerujo</tt>资料夹中。
+        你可以利用档案浏览器APP找到他们。你应该在设备以外的地方备份他们以免你的设备爆炸或失窃后的损失。</p>
+        <p>选择一个钱包开启或点选\"+\"符号以建立一个新的。或是选择以下的操作:</p>
+        <h3>详细信息</h3>
+        <p>显示钱包详细信息如种子码 &amp; 密钥。</p>
         <h3>接收</h3>
-        <p>產生一個QR碼以接收Monero。</p>
+        <p>产生一个QR码以接收Monero。</p>
         <h3>重新命名</h3>
-        <p>重新命名錢包名稱，已備份的錢包不會被更改名稱</p>
-        <h3>備份</h3>
-        <p>建立一份錢包副本在<tt>monerujo</tt>中的<tt>backups</tt>資料夾內並覆寫上一次的備份。</p>
+        <p>重新命名钱包名称，已备份的钱包不会被更改名称</p>
+        <h3>备份</h3>
+        <p>建立一份钱包副本在<tt>monerujo</tt>中的<tt>backups</tt>资料夹內并覆写上一次的备份。</p>
         <h3>封存</h3>
-        <p>將建立一份備份後刪除錢包，錢包副本將會留存於<tt>backups</tt>資料夾中。
-        若你再也不需要這錢包則可利用檔案瀏覽器APP或可安全刪除檔案APP將之刪除。</p>
+        <p>将建立一份备份后刪除钱包，钱包副本将会留存于<tt>backups</tt>资料夹中。
+        若你再也不需要这钱包则可利用档案浏览器APP或可安全刪除档案APP将之刪除。</p>
     ]]></string>
 
     <string name="help_wallet"><![CDATA[
-        <h1>錢包介面</h1>
-        <h2>掃描</h2>
-        由於Monero的交易是隱私保護的，因此每當你開啟Monerujo錢包時我們必須
-        在區塊鏈上掃描是否有最新的Monero被傳送到你的錢包中，將會儲存僅與你錢包相關的資訊在裝置中。
-        若你有好一段時間沒有使用錢包，那這個步驟將會花費你一些時間。
-        <h2>餘額</h2>
-        <p><b>救命啊! 我的錢包餘額不見了/未確認!</b><br/>
-        別緊張，當你發送交易出去時，你的部分餘額可能會暫時顯示未確認。
-        這只是Monero在區塊鏈上進行找零的過程。
-        想了解更多關於找零的過程請參閱 https://getmonero.org/resources/moneropedia/change.html
+        <h1>钱包介面</h1>
+        <h2>扫描</h2>
+        由于Monero的交易是隐私保护的，因此每当你开启Monerujo钱包时我们必须
+        在区块链上扫描是否有最新的Monero被传送到你的钱包中，将会储存仅与你钱包相关的信息在设备中。
+        若你有好一段时间沒有使用钱包，那这个步骤将会支付你一些时间。
+        <h2>余额</h2>
+        <p><b>救命啊! 我的钱包余额不见了/未确认!</b><br/>
+        別紧张，当你发送交易出去时，你的部分余额可能会暂时显示未确认。
+        这只是Monero在区块链上进行找零的过程。
+        想了解更多关于找零的过程请参阅 https://getmonero.org/resources/moneropedia/change.html
         <h2>交易列表</h2>
-        <p>錢包交易的列表。在唯讀錢包中，僅會顯示接收到的交易。</p>
+        <p>钱包交易的列表。在唯读钱包中，仅会显示接收到的交易。</p>
     ]]></string>
 
     <string name="help_tx_details"><![CDATA[
         <h1>交易明細</h1>
         <h2>收款地址</h2>
-        這是你發送Monero過去的錢包地址。
+        这是你发送Monero过去的钱包地址。
         <h2>付款ID</h2>
-        你可以使用付款ID以幫助識別雙方的款項交易。這是選填項目並且完全為隱私保護的。
-        舉例來說這可以讓公司行號辨別你的這筆款項是用來支付某項購買的商品。
+        你可以使用付款ID以帮助识別双方的款项交易。这是选填项目并且完全为隐私保护的。
+        举例来說这可以让公司行号辨別你的这笔款项是用来支付某项购买的商品。
         <h2>交易ID</h2>
-        這是可以用來在Monero區塊鏈瀏覽器上查詢的被隱蔽交易ID。在這裡可查詢:
+        这是可以用来在Monero区块链浏览器上查询的被隐蔽交易ID。在这里可查询:
         <a href="https://xmrchain.net/">https://xmrchain.net/</a>
-        <h2>TX KEY (交易金鑰)</h2>
-        這是該筆交易的私鑰。請妥善保護這組金鑰，因為這金鑰將可揭露你該筆交易的環狀簽名
-        而使得該筆交易透明化。
-        <h2>區塊</h2>
-        這是包裹該筆交易的區塊編號。
+        <h2>TX KEY (交易密钥)</h2>
+        这是该笔交易的私钥。请妥善保护这组密钥，因为这密钥将可揭露你该笔交易的环状签名
+        而使得该笔交易透明化。
+        <h2>区块</h2>
+        这是包裹该笔交易的区块編号。
     ]]></string>
 
     <string name="help_send"><![CDATA[
-        <h1>發送</h1>
+        <h1>发送</h1>
         <h2>收款者地址</h2>
-        <p>這是你欲發送Monero過去的錢包地址。你可以從剪貼簿貼上, 掃描QR碼或是手動輸入。
-        請務必再三確認地址正確以免發送至錯誤的錢包地址</p>
-        <p>除了發送XMR，你還可透過 XMR.TO 服務來發送BTC (請至 https://xmr.to
-        了解更多)，或在下面閱讀發送BTC的說明</p>
+        <p>这是你欲发送Monero过去的钱包地址。你可以从剪贴簿贴上, 扫描QR码或是手动输入。
+        请务必再三确认地址正确以免发送至错误的钱包地址</p>
+        <p>除了发送XMR，你还可透过 XMR.TO 服务来发送BTC (请至 https://xmr.to
+        了解更多)，或在下面阅读发送BTC的說明</p>
         <h2>付款ID</h2>
-        <p>你可以使用付款ID以幫助識別雙方的款項交易。這是選填項目並且完全為隱私保護的。
-        舉例來說這可以讓公司行號辨別你的這筆款項是用來支付某項購買的商品。<p>
+        <p>你可以使用付款ID以帮助识別双方的款项交易。这是选填项目并且完全为隐私保护的。
+        举例来說这可以让公司行号辨別你的这笔款项是用来支付某项购买的商品。<p>
         <h2>Ring size</h2>
-        <p>在Monerujo中你有數種Ring size可以選擇，如果你是入門使用者我們建議你使用ring size 7。
-        增加ring size的數量可以增加環狀簽名的數量，理論上可以增加隱私保護強度(plausible deniability)。
-        但設定高ring size亦會讓你的交易網路中更為引人注意。</p>
-        <h2>優先權</h2>
-        <p>這個設定將會影響你的交易被納入區塊的速度。越高優先權的交易將會花費更多的手續費，反之亦然。
-        請注意若你選擇低手續費則可能會讓你的交易等待數小時才能被納入區塊。預設優先權為\"中等\"。</p>
-        <h1>發送BTC</h1>
+        <p>在Monerujo中你有数种Ring size可以选择，如果你是入门使用者我们建議你使用ring size 7。
+        增加ring size的数量可以增加环状签名的数量，理論上可以增加隐私保护強度(plausible deniability)。
+        但设定高ring size亦会让你的交易网络中更为引人注意。</p>
+        <h2>优先权</h2>
+        <p>这个设定将会影响你的交易被纳入区块的速度。越高优先权的交易将会支付更多的手续费，反之亦然。
+        请注意若你选择低手续费则可能会让你的交易等待数小时才能被纳入区块。预设优先权为\"中等\"。</p>
+        <h1>发送BTC</h1>
         <h2>XMR.TO</h2>
-        <p>XMR.TO 是一個可以將XMR轉換為BTC的第三方服務。
-        我們利用XMR.TO的API將其服務整合至Monerujo中。請參閱 https://xmr.to 後自行決定是否使用。
-        Monerujo開發團隊與XMR.TO並無相關，無法為你解決其服務上的問題</p>
-        <h2>XMR.TO 匯率<h2>
-        <p>在 \"金額\" 的頁面中你將看到 XMR.TO 服務的參數。包含了匯率以及BTC金額的上下限。
-        請注意這個階段顯示的匯率並不是確定的。你也可以看到在多少金額之下可以直接發送BTC，而不用等待XMR的確認。
-        (詳見 XMR.TO的FAQ以了解更多)。請注意XMR.TO並不額外收取手續費用，是不是很棒呢?</p>
-        <h2>XMR.TO 訂單<h2>
-        <p>在 \"確認\" 的頁面中，你將可以看到正式的XMR.TO訂單。這訂單僅在一段時間內有效。
-        你可以在 \"發送\" 的按鈕上看到倒數計時。這時的匯率可能與前一個頁面顯示的不同</p>
-        <h2>XMR.TO 私鑰<h2>
-        <p>由於Monerujo僅處理Monero的部分，你的XMR.TO金鑰將可用於再XMR.TO的首頁上查詢追蹤BTC部分的交易狀況。</p>
-        <p>請注意，此金鑰僅在交易發起的24小時內有效。</p>
-        <h2>XMR.TO 倒數計時!</h2>
-        <p>當倒數計時歸零的時候，你將會需要回到上一步再回到\"確認\"頁面重新向XMR.TO尋求匯率報價</p>
+        <p>XMR.TO 是一个可以将XMR转换为BTC的第三方服务。
+        我们利用XMR.TO的API将其服务整合至Monerujo中。请参阅 https://xmr.to 后自行决定是否使用。
+        Monerujo开发团队与XMR.TO并无相关，无法为你解决其服务上的问題</p>
+        <h2>XMR.TO 汇率<h2>
+        <p>在 \"金额\" 的页面中你将看到 XMR.TO 服务的参数。包含了汇率以及BTC金额的上下限。
+        请注意这个阶段显示的汇率并不是确定的。你也可以看到在多少金额之下可以直接发送BTC，而不用等待XMR的确认。
+        (详见 XMR.TO的FAQ以了解更多)。请注意XMR.TO并不额外收取手续费用，是不是很棒呢?</p>
+        <h2>XMR.TO 订单<h2>
+        <p>在 \"确认\" 的页面中，你将可以看到正式的XMR.TO订单。这订单仅在一段时间內有效。
+        你可以在 \"发送\" 的按鈕上看到倒数计时。这时的汇率可能与前一个页面显示的不同</p>
+        <h2>XMR.TO 私钥<h2>
+        <p>由于Monerujo仅处理Monero的部分，你的XMR.TO密钥将可用于再XMR.TO的首页上查询追踪BTC部分的交易状況。</p>
+        <p>请注意，此密钥仅在交易发起的24小时內有效。</p>
+        <h2>XMR.TO 倒数计时!</h2>
+        <p>当倒数计时归零的时候，你将会需要回到上一步再回到\"确认\"页面重新向XMR.TO寻求汇率报价</p>
     ]]></string>
 
     <string name="help_xmrto"><![CDATA[
-        <h1>發送 BTC</h1>
+        <h1>发送 BTC</h1>
         <h2>XMR.TO</h2>
-        <p>XMR.TO 是一個可以將XMR轉換為BTC的第三方服務。
-        我們利用XMR.TO的API將其服務整合至Monerujo中。請參閱 https://xmr.to 後自行決定是否使用。
-        Monerujo開發團隊與XMR.TO並無相關，無法為你解決其服務上的問題</p>
-        <h2>XMR.TO 匯率<h2>
-        <p>在 \"金額\" 的頁面中你將看到 XMR.TO 服務的參數。包含了匯率以及BTC金額的上下限。
-        請注意這個階段顯示的匯率並不是確定的。你也可以看到多少金額的可以進行零確認XMR的BTC發送
-        (詳見 XMR.TO的FAQ以了解更多)。請注意XMR.TO並不額外收取手續費用，是不是很棒呢?</p>
-        <h2>XMR.TO 訂單<h2>
-        <p>在 \"確認\" 的頁面中，你將可以看到正式的XMR.TO訂單。這訂單僅在一段時間內有效。
-        你可以在 \"發送\" 的按鈕上看到倒數計時。這時的匯率可能與前一個頁面顯示的不同</p>
-        <h2>XMR.TO 私鑰<h2>
-        <p>由於Monerujo僅處理Monero的部分，你的XMR.TO金鑰將可用於再XMR.TO的首頁上查詢追蹤BTC部分的交易狀況。</p>
-        <p>請注意，此金鑰僅在交易發起的24小時內有效。</p>
-        <h2>XMR.TO 倒數計時!</h2>
-        <p>當倒數計時歸零的時候，你將會需要回到上一步再回到\"確認\"頁面重新向XMR.TO尋求匯率報價</p>
+        <p>XMR.TO 是一个可以将XMR转换为BTC的第三方服务。
+        我们利用XMR.TO的API将其服务整合至Monerujo中。请参阅 https://xmr.to 后自行决定是否使用。
+        Monerujo开发团队与XMR.TO并无相关，无法为你解决其服务上的问題</p>
+        <h2>XMR.TO 汇率<h2>
+        <p>在 \"金额\" 的页面中你将看到 XMR.TO 服务的参数。包含了汇率以及BTC金额的上下限。
+        请注意这个阶段显示的汇率并不是确定的。你也可以看到多少金额的可以进行零确认XMR的BTC发送
+        (详见 XMR.TO的FAQ以了解更多)。请注意XMR.TO并不额外收取手续费用，是不是很棒呢?</p>
+        <h2>XMR.TO 订单<h2>
+        <p>在 \"确认\" 的页面中，你将可以看到正式的XMR.TO订单。这订单仅在一段时间內有效。
+        你可以在 \"发送\" 的按鈕上看到倒数计时。这时的汇率可能与前一个页面显示的不同</p>
+        <h2>XMR.TO 私钥<h2>
+        <p>由于Monerujo仅处理Monero的部分，你的XMR.TO密钥将可用于再XMR.TO的首页上查询追踪BTC部分的交易状況。</p>
+        <p>请注意，此密钥仅在交易发起的24小时內有效。</p>
+        <h2>XMR.TO 倒数计时!</h2>
+        <p>当倒数计时归零的时候，你将会需要回到上一步再回到\"确认\"页面重新向XMR.TO寻求汇率报价</p>
     ]]></string>
 
 </resources>
