--- a/app/src/main/res/values-ru/about.xml
+++ b/app/src/main/res/values-ru/about.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="about_title">About</string>
-    <string name="about_close">Close</string>
-    <string name="about_whoami">I am monerujo</string>
-    <string name="about_version">Version %1$s (%2$d)</string>
+    <string name="about_title">О программе</string>
+    <string name="about_close">Закрыть</string>
+    <string name="about_whoami">Я monerujo</string>
+    <string name="about_version">Версия %1$s (%2$d)</string>
 
     <string name="credits_text"><![CDATA[
-        <b>Credits</b>
+        <b>Информация</b>
         <br/>
         m2049r, baltsar777, anhdres, keejef,
         rehrar, EarlOfEgo et al.
@@ -15,49 +15,50 @@
         ]]></string>
 
     <string name="privacy_policy"><![CDATA[
-        <h1>Privacy Policy</h1>
-        <p>This page informs you of our policies regarding the collection,
-        use and disclosure of personal information we receive from users of our
-        app (monerujo: Monero Wallet).
+        <h1>Данная страница содержит информацию, касающуюся нашей политики по сбору,
+		использованию и раскрытию ваших личных данных, которые мы получаем
+		от пользователей приложения (monerujo: Monero Wallet).
         </p>
-        <p>By using the app, you agree to the collection and use of information in
-        accordance with this policy.
+        <p>Используя приложение, вы соглашаетесь на сбор и использование
+		информации в соответствии с данной политикой.
         </p>
-        <h2>Data Collected</h2>
-        <p>Personal data is any kind of data that could identify an individual.
+        <h2>Собранные данные</h2>
+        <p>Личными данными являются любые данные, которые позволяют
+		идентифицировать вас как личность.</p>
+        <p>Приложение локально собирает и обрабатывает ключи и публичные адреса Monero
+		с целью обработки транзакций  и её передачи в сеть Monero в зашифрованной форме.
         </p>
-        <p>Monero keys and public addresses are collected and processed by the app locally
-        for the purpose of processing transactions and transmitted into the Monero Network
-        in encrypted form.
-        </p>
-        <p>Other personal data is not collected by the app.</p>
-        <p>If you use the USD/EUR exchange (optional) functionality, monerujo fetches the exchange
-        rate through the public API of kraken.com.
-        See their privacy policy at https://www.kraken.com/legal/privacy for
-        details on how data in your requests is collected (especially the
-        section "Information We Collect Automatically").</p>
-        <p>If you use the app to pay to BTC addresses, you will be using the XMR.TO service.
-        See their privacy policy at https://xmr.to/ for details. Monerujo send them the BTC
-        destination address and amount. Your IP will also be collectable.</p>
-        <h2>App Permissions</h2>
+        <p>Приложение не собирает каких-либо других личных данных.</p>
+        <p>Если вы используете функцию обмена USD/EUR, Monerujo осуществляет обмен 
+		в соответствии с курсом обмена, получаемым через API с ресурса kraken.com.
+        Политика конфиденциальности этого ресурса подробно изложена
+		на вебсайте https://www.kraken.com/legal/privacy, где описан процесс сбора данных,
+		содержащихся в ваших запросах (в частности, в разделе «Информация,
+		сбор которой происходит автоматически»).</p>
+        <p>Если вы используете приложение для оплаты по адресам BTC,
+		вы будете использовать сервис XMR.TO. Их политика конфиденциальности подробно
+		изложена на вебсайте https://xmr.to/. Monerujo отправляет им адрес
+		назначения BTC и сумму. Ваш IP также указывается.</p>
+        <h2>Разрешения, необходимые приложению</h2>
         <ul>
-        <li>INTERNET : Connect to the Monero Network via a Monero Daemon Node</li>
-        <li>READ_EXTERNAL_STORAGE : Read wallet files stored on the device</li>
-        <li>WRITE_EXTERNAL_STORAGE : Write wallet files stored on the device</li>
-        <li>WAKE_LOCK : Keep device awake while syncing</li>
-        <li>CAMERA : Scan QR Codes for receiving Monero</li>
+        <li>ИНТЕРНЕТ. Подсоединение к сети Monero через демон-узел.</li>
+        <li>READ_EXTERNAL_STORAGE. Считывание файлов кошелька, которые хранятся на устройстве.</li>
+        <li>WRITE_EXTERNAL_STORAGE. Запись файлов кошелька, которые хранятся на устройстве.</li>
+        <li>WAKE_LOCK. Выведение устройства из неактивного состояния при синхронизации.</li>
+        <li>CAMERA. Сканирование QR-кодов для получения Monero.</li>
         </ul>
-        <h2>Changes to this Privacy Policy</h2>
-        <p>We may update this privacy policy from time to time. We will notify
-        you of any changes by posting the new privacy policy in the app and on the
-        website (www.monerujo.io)
-        You are advised to review this privacy policy periodically for any changes.
-        <p>This Privacy Policy was last updated: 10th November, 2017.
+        <h2>Изменения в политике конфиденциальности</h2>
+        <p>В данные положения политики конфиденциальности периодически могут 
+		вноситься изменения. В случае внесения таких изменений, новые положения
+		будут опубликованы в приложении и на вебсайте (www.monerujo.io).
+		Рекомендуется периодически проверять положения политики 
+		конфиденциальности на предмет внесения изменений.
+        <p>Дата последнего обновления положений политики конфиденциальности: 10.11.2017
         </p>
-        <h2>Contact Us</h2>
-        <p>If you have any questions about our privacy policy,
-        or how your data is being collected and processed,
-        please e-mail privacy@monerujo.io.
+        <h2>Контактная информация</h2>
+        <p>Если у вас возникли вопросы, касающиеся нашей политики конфиденциальности
+		или того, как происходит сбор и обработка ваших данных,
+		напишите нам по адресу privacy@monerujo.io
         </p>
         ]]></string>
 
