--- a/app/src/main/res/values-ru/about.xml
+++ b/app/src/main/res/values-ru/about.xml
@@ -41,11 +41,11 @@
 		назначения BTC и сумму. Ваш IP также указывается.</p>
         <h2>Разрешения, необходимые приложению</h2>
         <ul>
-        <li>ИНТЕРНЕТ. Подсоединение к сети Monero через демон-узел.</li>
-        <li>READ_EXTERNAL_STORAGE. Считывание файлов кошелька, которые хранятся на устройстве.</li>
-        <li>WRITE_EXTERNAL_STORAGE. Запись файлов кошелька, которые хранятся на устройстве.</li>
-        <li>WAKE_LOCK. Выведение устройства из неактивного состояния при синхронизации.</li>
-        <li>CAMERA. Сканирование QR-кодов для получения Monero.</li>
+        <li>INTERNET : Подсоединение к сети Monero через демон-узел.</li>
+        <li>READ_EXTERNAL_STORAGE : Считывание файлов кошелька, которые хранятся на устройстве.</li>
+        <li>WRITE_EXTERNAL_STORAGE : Запись файлов кошелька, которые хранятся на устройстве.</li>
+        <li>WAKE_LOCK : Выведение устройства из неактивного состояния при синхронизации.</li>
+        <li>CAMERA : Сканирование QR-кодов для получения Monero.</li>
         </ul>
         <h2>Изменения в политике конфиденциальности</h2>
         <p>В данные положения политики конфиденциальности периодически могут 
