--- a/app/src/main/res/values-ru/help.xml
+++ b/app/src/main/res/values-ru/help.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="help_create_new"><![CDATA[
-        <h1>Создать кошелёк — новый</h1>
+        <h1>Создать кошелёк — Новый</h1>
         <p>Если вам нужен новый адрес Monero</p>
         <p>Введите уникальное имя и пароль кошелька.
         Пароль используется для защиты данных вашего кошелька на устройстве.
@@ -33,21 +33,21 @@
 
     <string name="help_create_keys"><![CDATA[
         <h1>Создать кошелёк — Ключи</h1>
-        <p>If you are recovering your wallet using your keys!</p>
+        <p>Если вы хотите восстанавить свой кошелек с помощью ключей!</p>
         <p>Необходимо ввести уникальные имя и пароль кошелька. Пароль используется для защиты данных вашего
 		кошелька на устройстве. Необходимо использовать надёжный пароль. Лучше даже использовать фразу-пароль.<p>
-        <p>Enter your Monero Address in the field \"Public Address\" and fill out \"View Key\" and  \"Spend Key\".</p>
+        <p>Введите ваш Monero адрес в поле \"Публичный адрес\", заполнить поле \"Ключ просмотра\" и  \"Ключ траты\".</p>
         <p>Если вам известен номер блока первой транзакции, который использовался с этим адресом, следует
 		ввести его в поле \"Восстановить высоту\". Если не заполнить это поле, то будет просканирован <em>весь</em> блокчейн,
 		чтобы найти транзакции, принадлежащие к вашему адресу, а это займёт <em>много</em> времени.</p>
     ]]></string>
 
     <string name="help_create_view"><![CDATA[
-        <h1>Create Wallet - View</h1>
-        <p>If you just want to monitor incoming transactions to a wallet!</p>
+        <h1>Создать кошелёк - Просмотр</h1>
+        <p>Если вы просто хотите просматривать входящие транзакции на кошелек!</p>
         <p>Необходимо ввести уникальные имя и пароль кошелька. Пароль используется для защиты данных вашего
 		кошелька на устройстве. Необходимо использовать надёжный пароль. Лучше даже использовать фразу-пароль.<p>
-        <p>Enter your Monero Address in the field \"Public Address\" and fill out the \"View Key\".</p>
+        <p>Введите ваш Monero адрес в поле \"Публичный адрес\", заполнить поле \"Ключ просмотра\".</p>
         <p>Если вам известен номер блока первой транзакции, который использовался с этим адресом, следует
 		ввести его в поле \"Восстановить высоту\". Если не заполнить это поле, то будет просканирован <em>весь</em> блокчейн,
 		чтобы найти транзакции, принадлежащие к вашему адресу, а это займёт <em>много</em> времени.</p>
@@ -159,82 +159,84 @@
     ]]></string>
 
     <string name="help_send"><![CDATA[
-        <h1>Send</h1>
-        <h2>Receiver’s address</h2>
-        <p>This is the public address of the wallet you are sending Moneroj to, you can copy this from
-        your clipboard, scan a QR code or enter it manually. Make sure you triple check this to
-        ensure you aren’t sending coins to the wrong address.</p>
-        <p>In addition to sending XMR, you can send BTC through the XMR.TO service (see https://xmr.to
-        for details). See the section on sending BTC below.</p>
-        <h2>Payment ID</h2>
-        <p>You can use a Payment ID to identify the reason you sent Monero between two parties. This
-        is fully optional and private. For example it can allow a business to reconcile your
-        transaction with an item you bought.<p>
-        <h2>Ring size</h2>
-        <p>There are a number of ring sizes to choose from in Monerujo. If you are a beginner user
-        we recommend you stick with a ring size of 7. Increasing the ring size above 7 increases
-        the amount of signers in a ring signature, theoretically providing increased plausible
-        deniability. However setting high ring sizes can also make your transaction stand out on
-        the blockchain.</p>
-        <h2>Priority</h2>
-        <p>This setting determines the speed at which your transaction will be included in the
-        blockchain. A high priority setting will correlate directly with a higher transaction fee
-        and the inverse is true for a low priority. Please note that if you set your transaction to
-        a low priority it can be hours before it is included on the blockchain. The default priority
-        is \"Medium\".</p>
-        <h1>Sending BTC</h1>
+        <h1>Отправка</h1>
+        <h2>Адрес получателя</h2>
+        <p>TЭто публичный адрес кошелька, на который вы отправляете Monero. Вы можете скопировать его
+		из буфера, отсканировать QR-код или ввести вручную. Следует трижды проверить правильность
+		этого адреса, чтобы не отправить монеты не тому пользователю.</p>
+        <p>Помимо XMR служба XMR.TO позволяет отправлять BTC (подробности ищите на https://xmr.to).
+		См. раздел по отправке BTC ниже.</p>
+        <h2>Идентификатор оплаты (Payment ID)</h2>
+        <p>Вы можете использовать Payment ID для идентификации причины, по которой Monero передаётся
+		одной стороной другой стороне. Это опциональная и конфиденциальная операция. Например,
+		она позволяет коммерсантам сверить вашу транзакцию с товаром, который был приобретён вами.<p>
+        <h2>Размер кольца</h2>
+        <p>Monerujo позволяет выбрать размер кольца. Если вы являетесь начинающим пользователем,
+		то вам рекомендуется использовать размер кольца из 7 подписей. Повышение размера кольца сверх 7
+		увеличивает количество подписантов в кольцевой подписи, что, теоретически, повышает
+		\"правдоподобное отрицание\". Тем не менее, больший размер кольца также выделяет вашу
+		транзакцию в блокчейне.</p>
+        <h2>Приоритетность</h2>
+        <p>Эта настройка определяет скорость, с которой ваша транзакция будет включена в блокчейн. 
+		Более высокий приоритет непременно будет означать более высокую комиссию, и наоборот в случае
+		с низким приоритетом. Следует отметить, что в случае назначения транзакции низкого приоритета,
+		могут пройти часы, прежде чем она будет включена в блокчейн. По умолчанию устанавливается
+		\"Среднее\" значение приоритета.</p>
+        <h1>Отправка BTC</h1>
         <h2>XMR.TO</h2>
-        <p>XMR.TO is a third party service which acts as an exchange from Monero to Bitcoin.
-        We use the XMR.TO API to integrate Bitcoin payments into Monerujo. Please check out
-        https://xmr.to and decide for yourself if this is something you want to use. The Monerujo
-        Team is not associated with XMR.TO and cannot help you with their service.</p>
-        <h2>XMR.TO Exchange Rate<h2>
-        <p>On the \"Amount\" screen you will be shown the current parameters of the XMR.TO service. These
-        include the current exchange rate as well as upper and lower BTC limits. Note that this
-        rate is not guaranteed at this point. You will also see
-        the amount up to which the BTC transaction will be executed instantly without waiting for
-        XMR confirmations (see the XMR.TO FAQ for more details). Please note, that XMR.TO does
-        not charge extra fees - how cool is that?</p>
-        <h2>XMR.TO Order<h2>
-        <p>On the \"Confirm\" screen, you will see the actual XMR.TO order. This order is valid for
-        a limited time - you may notice a countdown on the \"Spend\" button. The exchange rate may
-        be different to the indicative one shown on previous screens.</p>
-        <h2>XMR.TO Secret Key<h2>
-        <p>Since Monerujo only handles the Monero part of your transaction your XMR.TO secret key
-        can be used to track the Bitcoin part of your order on the XMR.TO homepage.</p>
-        <p>Please note, that this secret key is only valid for 24 hours after the transaction is
-        started!</p>
-        <h2>XMR.TO Countdown!</h2>
-        <p>Once the countdown reaches zero, you need to get a new quote from XMR.TO by going back to the
-        previous step and then coming back to the \"Confirm\" screen.</p>
+        <p>XMR.TO является сторонней службой, которая помогает осуществлять обмен Monero на Bitcoin.
+		мы используем API службы XMR.TO для включения платежей с использованием Bitcoin в Monerujo.
+		Пожалуйста, посетите https://xmr.to, и решите, хотите ли вы использовать эту возможность.
+		Команда Monerujo не связана с XMR.TO и не может помочь вам в работе с этой службой.</p>
+        <h2>Курс обмена XMR.TO<h2>
+        <p>На экране указания суммы \"Сумма\" отображаются текущие параметры службы XMR.TO.
+		Здесь также отображается обменный курс и верхний и нижний пределы BTC. Необходимо отметить,
+		что на данном этапе курс не гарантируется. Вы также сможете увидеть сумму, вплоть до которой
+		транзакция BTC будет произведена немедленно без ожидания подтверждения со стороны XMR
+		(подробности описаны в XMR.TO FAQ). Помимо этого, XMR.TO не требует выплаты какой-либо
+		дополнительной комиссии. Круто?</p>
+        <h2>Заказ XMR.TO<h2>
+        <p>На экране подтверждения \"Подтверждение\" можно увидеть фактический заказ XMR.TO. Этот заказ
+		действителен в течение ограниченного времени. Обратный отсчёт можно увидеть на кнопке
+		траты \"Трата\". Курс обмена может отличаться от того, что был показан на предыдущих экранах..</p>
+        <h2>Секретный ключ XMR.TO<h2>
+        <p>Так как Monerujo отвечает за ту часть транзакции, которая связана с Monero, для отслеживания
+		на домашней странице XMR.TO той части вашего заказа, которая связана с Bitcoin, можно использовать
+		секретный ключ.</p>
+        <p>Следует помнить о том, что такой секретный ключ действителен только в течение 24 часов после
+		начала транзакции!</p>
+        <h2>Обратный отсчёт XMR.TO</h2>
+        <p>Как только обратный отсчёт достигнет нулевой точки, вам понадобится получить от XMR.TO новое
+		предложение, вернувшись к предыдущему шагу, а затем к экрану подтверждения \"Подтверждение\".</p>
     ]]></string>
 
     <string name="help_xmrto"><![CDATA[
-        <h1>Sending BTC</h1>
+        <h1>Отправка BTC</h1>
         <h2>XMR.TO</h2>
-        <p>XMR.TO is a third party service which acts as an exchange from Monero to Bitcoin.
-        We use the XMR.TO API to integrate Bitcoin payments into Monerujo. Please check out
-        https://xmr.to and decide for yourself if this is something you want to use. The Monerujo
-        Team is not associated with XMR.TO and cannot help you with their service.</p>
-        <h2>XMR.TO Exchange Rate<h2>
-        <p>On the \"Amount\" screen you will be shown the current parameters of the XMR.TO service. These
-        include the current exchange rate as well as upper and lower BTC limits. Note that this
-        rate is not guaranteed at this point. You will also see
-        the amount up to which the BTC transaction will be executed instantly without waiting for
-        XMR confirmations (see the XMR.TO FAQ for more details). Please note, that XMR.TO does
-        not charge extra fees - how cool is that?</p>
-        <h2>XMR.TO Order<h2>
-        <p>On the \"Confirm\" screen, you will see the actual XMR.TO order. This order is valid for
-        a limited time - you may notice a countdown on the \"Spend\" button. The exchange rate may
-        be different to the indicative one shown on previous screens.</p>
-        <h2>XMR.TO Secret Key<h2>
-        <p>Since Monerujo only handles the Monero part of your transaction your XMR.TO secret key
-        can be used to track the Bitcoin part of your order on the XMR.TO homepage.</p>
-        <p>Please note, that this secret key is only valid for 24 hours after the transaction is
-        started!</p>
-        <h2>XMR.TO Countdown!</h2>
-        <p>Once the countdown reaches zero, you need to get a new quote from XMR.TO by going back to the
-        previous step and then coming back to the \"Confirm\" screen.</p>
+        <p>XMR.TO является сторонней службой, которая помогает осуществлять обмен Monero на Bitcoin.
+		мы используем API службы XMR.TO для включения платежей с использованием Bitcoin в Monerujo.
+		Пожалуйста, посетите https://xmr.to, и решите, хотите ли вы использовать эту возможность.
+		Команда Monerujo не связана с XMR.TO и не может помочь вам в работе с этой службой.</p>
+        <h2>Курс обмена XMR.TO<h2>
+        <p>На экране указания суммы \"Сумма\" отображаются текущие параметры службы XMR.TO.
+		Здесь также отображается обменный курс и верхний и нижний пределы BTC. Необходимо отметить,
+		что на данном этапе курс не гарантируется. Вы также сможете увидеть сумму, вплоть до которой
+		транзакция BTC будет произведена немедленно без ожидания подтверждения со стороны XMR
+		(подробности описаны в XMR.TO FAQ). Помимо этого, XMR.TO не требует выплаты какой-либо
+		дополнительной комиссии. Круто?</p>
+        <h2>Заказ XMR.TO<h2>
+        <p>На экране подтверждения \"Подтверждение\" можно увидеть фактический заказ XMR.TO. Этот заказ
+		действителен в течение ограниченного времени. Обратный отсчёт можно увидеть на кнопке
+		траты \"Трата\". Курс обмена может отличаться от того, что был показан на предыдущих экранах..</p>
+        <h2>Секретный ключ XMR.TO<h2>
+        <p>Так как Monerujo отвечает за ту часть транзакции, которая связана с Monero, для отслеживания
+		на домашней странице XMR.TO той части вашего заказа, которая связана с Bitcoin, можно использовать
+		секретный ключ.</p>
+        <p>Следует помнить о том, что такой секретный ключ действителен только в течение 24 часов после
+		начала транзакции!</p>
+        <h2>Обратный отсчёт XMR.TO</h2>
+        <p>Как только обратный отсчёт достигнет нулевой точки, вам понадобится получить от XMR.TO новое
+		предложение, вернувшись к предыдущему шагу, а затем к экрану подтверждения \"Подтверждение\".</p>
     ]]></string>
 
 </resources>
