--- a/app/src/main/res/values-ru/about.xml
+++ b/app/src/main/res/values-ru/about.xml
@@ -41,7 +41,7 @@
 		назначения BTC и сумму. Ваш IP также указывается.</p>
         <h2>Разрешения, необходимые приложению</h2>
         <ul>
-        <li>INTERNET : Подсоединение к сети Monero через демон-узел.</li>
+        <li>INTERNET : Подключение к сети Monero через deamon узел.</li>
         <li>READ_EXTERNAL_STORAGE : Считывание файлов кошелька, которые хранятся на устройстве.</li>
         <li>WRITE_EXTERNAL_STORAGE : Запись файлов кошелька, которые хранятся на устройстве.</li>
         <li>WAKE_LOCK : Выведение устройства из неактивного состояния при синхронизации.</li>
